--- a/js/templates/treatment.tpl.html
+++ b/js/templates/treatment.tpl.html
@@ -56,6 +56,10 @@
                                                                 ng-click="dc.addTreatment(treatment, false, false, treatments)">Neue
                 Nichtmandanten-Nebenbehandlung</a>
             </li>
+            <li role="presentation" class="divider"></li>
+            <li role="presentation">
+                <a href role="menuitem" ng-click="dc.createPreset(treatment)">Neue Struktur</a>
+            </li>
         </ul>
     </div>
 </div>
