--- a/css/custom.css
+++ b/css/custom.css
@@ -625,9 +625,24 @@ span.checkmark {
 }
 
 .preset-widget {
-    width: 150px;
+    width: 250px;
     top: 250px;
-    left: 50px;
+    left: 50%;
+    margin-left: -125px;
+    z-index: 999;
+}
+
+.preset-widget-wrapper {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.3);
+    z-index: 998;
+}
+
+.preset-widget .panel {
+    margin-bottom: 0;
+    padding-bottom: 10px;
 }
 
 p.read-only-content {
