--- a/js/templates/treatment-toolbar.tpl.html
+++ b/js/templates/treatment-toolbar.tpl.html
@@ -87,6 +87,8 @@
                                 Grosse Schrift</a></li>
                             <li class="divider"></li>
                             <li><a href ng-click="toolbar.showTitleSettingsWidget(true)">Titel zeigen</a></li>
+                            <li class="divider"></li>
+                            <li><a href ng-click="toolbar.showPresetSettingWidget(true)">Strukturen verwalten</a></li>
                         </ul>
                     </div>
                 </div>
