added a preset settings widget, did some refactoring

--- a/js/templates/treatment-toolbar.tpl.html
+++ b/js/templates/treatment-toolbar.tpl.html
@@ -88,7 +88,7 @@
                             <li class="divider"></li>
                             <li><a href ng-click="toolbar.showTitleSettingsWidget(true)">Titel zeigen</a></li>
                             <li class="divider"></li>
-                            <li><a href ng-click="toolbar.showPresetSettingWidget(true)">Strukturen verwalten</a></li>
+                            <li><a href ng-click="toolbar.showPresetSettingsWidget(true)">Strukturen verwalten</a></li>
                         </ul>
                     </div>
                 </div>
