--- a/js/templates/treatment-toolbar.tpl.html
+++ b/js/templates/treatment-toolbar.tpl.html
@@ -1,4 +1,4 @@
-<div class="toolbar-wrapper" ng-show="vm.treatments.length">
+<div class="toolbar-wrapper">
     <div class="toolbar" ng-class="'mandator-' + vm.user.mandator.id + '-toolbar'" ng-cloak>
         <div class="row">
             <div class="col-xs-3">
