--- a/js/templates/textblock-widget.tpl.html
+++ b/js/templates/textblock-widget.tpl.html
@@ -17,7 +17,7 @@
             </div>
 
         </div>
-        <div class="list-group" ng-show="dc.selectedGroup.complexContent">
+        <div class="list-group selection-list" ng-show="dc.selectedGroup.complexContent">
             <div class="list-group-item" ng-repeat="block in dc.selectedGroup.complexContent">
                 <div class="input-group">
                     <span class="input-group-addon">
