removed process from urls, as it is sent via headers already

--- a/js/templates/treatment-toolbar.tpl.html
+++ b/js/templates/treatment-toolbar.tpl.html
@@ -31,11 +31,11 @@
                                href="{{vm.baseUrl}}treatment/">
                                 &nbsp;</a>
                             <a class="btn btn-default btn-xs biometric-report"
-                               ng-click="toolbar.openBiometricReport(vm.process)">&nbsp;</a>
+                               ng-click="toolbar.openBiometricReport()">&nbsp;</a>
                             <a class="btn btn-default btn-xs laboratory-report"
-                               ng-click="toolbar.openLaboratoryReport(vm.process)">&nbsp;</a>
+                               ng-click="toolbar.openLaboratoryReport()">&nbsp;</a>
                             <a class="btn btn-default btn-xs treatment-report"
-                               ng-click="toolbar.openTreatmentReport(vm.process, vm.treatments)">&nbsp;</a>
+                               ng-click="toolbar.openTreatmentReport(vm.treatments)">&nbsp;</a>
                             <a class="btn btn-default btn-xs search"
                                ng-click="toolbar.asteriskSearch(vm.treatments)">&nbsp;</a>
                             <a class="btn btn-default btn-xs sort"
