--- a/js/templates/treatment-toolbar.tpl.html
+++ b/js/templates/treatment-toolbar.tpl.html
@@ -6,7 +6,7 @@
             </div>
             <div class="col-xs-2">
                 <p ng-show="vm.treatments.length"
-                   ng-bind="vm.filteredTreatments.length + ' von ' + vm.treatments.length"></p>
+                   ng-bind="vm.filteredTreatments.length + ' von ' + vm.treatmentCount()"></p>
             </div>
             <div class="col-xs-2">
                 <div class="input-group">
