--- a/js/templates/treatment-toolbar.tpl.html
+++ b/js/templates/treatment-toolbar.tpl.html
@@ -49,6 +49,9 @@
                             <a class="btn btn-default btn-xs todo" href="{{vm.baseUrl}}todo/">&nbsp;</a>
                         </div>
                         <div class="btn-group">
+                            <a class="btn btn-default btn-xs"
+                               ng-hide="vm.treatmentCount() == vm.treatments.length || !vm.treatments"
+                                    ng-click="vm.loadNext()">{{vm.getNextCaption()}}</a>
                             <a class="btn btn-default btn-xs refresh" ng-click="vm.loadEntries()">&nbsp;</a>
                         </div>
                         <ul class="dropdown-menu gdt-list">
