--- a/css/custom.css
+++ b/css/custom.css
@@ -39,7 +39,7 @@
 .container-fluid {
     padding-left: 0;
     padding-right: 0;
-    padding-top: 50px;
+    padding-top: 70px;
 }
 
 .toolbar-wrapper {
@@ -833,4 +833,10 @@ h5.list-group-item.preset {
     position: absolute;
     cursor: text;
     color: rgba(0, 0, 0, 0.3);
+}
+
+@media (min-width: 1060px) {
+    .container-fluid {
+        padding-top: 50px;
+    }
 }
